[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/actors/ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/game_board.gd" type="Script" id=4]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/general/color_line.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 531.975, 10 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="GameBoard" type="Node2D"]
script = ExtResource( 4 )

[node name="UpperLimit" type="StaticBody2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperLimit"]
position = Vector2( 512.025, 0 )
shape = SubResource( 1 )

[node name="LowerLimit" type="StaticBody2D" parent="."]
position = Vector2( 0, 610 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerLimit"]
position = Vector2( 512.025, 0 )
shape = SubResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 20, 100 )
ball = NodePath("../Ball")

[node name="Player1_Goal" parent="." instance=ExtResource( 2 )]
collision_layer = 2
collision_mask = 4
paddle = NodePath("../Player1")

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1000, 100 )
ball = NodePath("../Ball")
player_controller = 1

[node name="Player2_Goal" parent="." instance=ExtResource( 2 )]
position = Vector2( 1034, 0 )
collision_layer = 2
collision_mask = 4
paddle = NodePath("../Player2")

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 494, 302 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100
follow_viewport_enable = true

[node name="ColorLine" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 6 )
color = Color( 1, 1, 1, 0.501961 )
width = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 48.0
custom_constants/separation = 100
alignment = 1

[node name="Player1_Score" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 442.0
margin_right = 458.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Player2_Score" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 558.0
margin_right = 582.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1
